moar animations, fixed issue on the loan book button not showing

--- a/www/sass/modules/_animations.sass
+++ b/www/sass/modules/_animations.sass
@@ -8,26 +8,29 @@
 .slide-right.ng-leave
   position: absolute
   background: inherit
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
   @include transition(ease-in-out 250ms)
 
-.slide-left.ng-enter
-  z-index: 101
-  position: absolute
-  width: 100%
+.slide-left.ng-enter 
+  /* NEW content placed far RIGHT BEFORE it slides IN from the RIGHT */
+  @include transform(translate3d(100%, 0, 0))
 
 .slide-left.ng-enter.ng-enter-active
   position: absolute
   width: 100%
-  @include transform(translateX(0))
+  /* NEW content ACTIVELY sliding IN from the RIGHT */
+  @include transform(translate3d(0, 0, 0))
 
 .slide-left.ng-leave 
-  z-index: 100
   @include transform(translateX(0))
 
 .slide-left.ng-leave.ng-leave-active
   opacity: 0
-  @include transform(translateX(-100%))
-
+  /* OLD content ACTIVELY sliding OUT to the LEFT */
+  @include transform(translate3d(-100%, 0, 0))
 
 .slide-right.ng-enter
   @include transform(translateX(-100%))
