--- a/www/stylesheets/app.css
+++ b/www/stylesheets/app.css
@@ -508,51 +508,59 @@ a.button.green {
 .slide-right.ng-leave {
   position: absolute;
   background: inherit;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   -webkit-transition: ease-in-out 250ms;
   -moz-transition: ease-in-out 250ms;
   -o-transition: ease-in-out 250ms;
   transition: ease-in-out 250ms;
 }
 
-/* line 13, ../sass/modules/_animations.sass */
+/* line 17, ../sass/modules/_animations.sass */
 .slide-left.ng-enter {
-  z-index: 101;
-  position: absolute;
-  width: 100%;
+  /* NEW content placed far RIGHT BEFORE it slides IN from the RIGHT */
+  -webkit-transform: translate3d(100%, 0, 0);
+  -moz-transform: translate3d(100%, 0, 0);
+  -ms-transform: translate3d(100%, 0, 0);
+  -o-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
 }
 
-/* line 18, ../sass/modules/_animations.sass */
+/* line 21, ../sass/modules/_animations.sass */
 .slide-left.ng-enter.ng-enter-active {
   position: absolute;
   width: 100%;
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
-}
-
-/* line 23, ../sass/modules/_animations.sass */
-.slide-left.ng-leave {
-  z-index: 100;
-  -webkit-transform: translateX(0);
-  -moz-transform: translateX(0);
-  -ms-transform: translateX(0);
-  -o-transform: translateX(0);
-  transform: translateX(0);
+  /* NEW content ACTIVELY sliding IN from the RIGHT */
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 /* line 27, ../sass/modules/_animations.sass */
-.slide-left.ng-leave.ng-leave-active {
-  opacity: 0;
-  -webkit-transform: translateX(-100%);
-  -moz-transform: translateX(-100%);
-  -ms-transform: translateX(-100%);
-  -o-transform: translateX(-100%);
-  transform: translateX(-100%);
+.slide-left.ng-leave {
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
 }
 
-/* line 32, ../sass/modules/_animations.sass */
+/* line 30, ../sass/modules/_animations.sass */
+.slide-left.ng-leave.ng-leave-active {
+  opacity: 0;
+  /* OLD content ACTIVELY sliding OUT to the LEFT */
+  -webkit-transform: translate3d(-100%, 0, 0);
+  -moz-transform: translate3d(-100%, 0, 0);
+  -ms-transform: translate3d(-100%, 0, 0);
+  -o-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+
+/* line 35, ../sass/modules/_animations.sass */
 .slide-right.ng-enter {
   -webkit-transform: translateX(-100%);
   -moz-transform: translateX(-100%);
@@ -561,7 +569,7 @@ a.button.green {
   transform: translateX(-100%);
 }
 
-/* line 35, ../sass/modules/_animations.sass */
+/* line 38, ../sass/modules/_animations.sass */
 .slide-right.ng-enter.ng-enter-active,
 .slide-right.ng-leave {
   position: absolute;
@@ -573,7 +581,7 @@ a.button.green {
   transform: translateX(0);
 }
 
-/* line 41, ../sass/modules/_animations.sass */
+/* line 44, ../sass/modules/_animations.sass */
 .slide-right.ng-leave.ng-leave-active {
   -webkit-transform: translateX(100%);
   -moz-transform: translateX(100%);
